--- a/Upload-OneDrive/Upload-OneDrive/packages.config
+++ b/Upload-OneDrive/Upload-OneDrive/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Identity.Client" version="4.2.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="System.Security.Principal" version="4.3.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
